<?xml version="1.0" encoding="utf-8"?>
<!--
 *
 * Licencia GPL v3
 * 
 * Copyright (C) 2012 Centro Nacional de Tecnologías de Información.
 * Gobierno Móvil es un producto de Gobierno en Línea Venezuela.
 * 
 * Copyright (C) 2012 Richard Ricciardelli. All Rights Reserved.
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or any
 * later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see http://www.gnu.org/licenses
 *
-->
<resources>

    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="clear_history_dialog">¿Desea borrar el historial de búsquedas?</string>
    <string name="suggestions_title">Guardar historial</string>
    <string name="suggestions_summary">Guarda el historial de búsquedas</string>
    <string name="cleared">El historial ha sido borrado</string>
    <string name="clear_history_summary">Borra el historial de búsquedas</string>
    <string name="clear_history">Borrar historial</string>
    <string name="search_preferences">Preferencias de búsqueda</string>
    <string name="settings_description">Funcionarios y trámites del Estado</string>
    <string name="search">Buscar</string>
    <string name="update">Actualizar</string>
    <string name="vibration">Vibración</string>
    <string name="vibration_summary_on">Vibración activada</string>
    <string name="vibration_summary_off">Vibración desactivada</string>
    <string name="preferences">Preferencias</string>
    <string name="government_online">Gobierno en Línea</string>
    <string name="signature">Enviado desde \"Gobierno Móvil\" para Android</string>
    <string name="executive">Poder Ejecutivo</string>
    <string name="legislative">Poder Legislativo</string>
    <string name="judicial">Poder Judicial</string>
    <string name="electoral">Poder Electoral</string>
    <string name="citizen">Poder Ciudadano</string>
    <string name="state">Poder Estatal</string>
    <string name="municipality">Poder Municipal</string>
    <string name="security">Órganos de Seguridad de la Nación</string>
    <string name="about">Acerca de</string>
    <string name="address">Dirección</string>
    <string name="mayoralties_title">Alcaldías</string>
    <string name="app_name">Gobierno Móvil</string>
    <string name="body">Comentario</string>
    <string name="cancel">Cancelar</string>
    <string name="compose">Redactar</string>
    <string name="cost">Costo</string>
    <string name="directory_title">Directorio del Estado</string>
    <string name="email">atencionusuario@cnti.gob.ve</string>
    <string name="error_db">ERROR: No se logró la conexión con la base de datos o no existe ningún registro</string>
    <string name="general">General</string>
    <string name="government_title">Escríbele al Gobierno</string>
    <string name="help_text">\<b><big>Directorio</big></b>		\n\nEn la sección \"Directorio\" usted podrá consultar el Directorio
		del Estado en donde encontrará información sobre los representantes
		principales de la Administración Pública Nacional.\n\n\<b><big>Trámites</big></b>		\n\nEn la sección \"Trámites\" usted podrá consultar información sobre
		los trámites disponibles para realizar en los respectivos entes de la
		Administración Pública Nacional.\n\n\<b><big>Gobierno</big></b>		\n\nEn la sección \"Gobierno\" usted podrá interactuar con el Centro
		Nacional de Tecnologías de Información para enviar algún comentario
		que considere importante sobre Gobierno en Línea.\n\n\<b><big>Acerca de</big></b>		\n\nEn la sección \"Acerca de\" encontrará información sobre la
		licencia de esta aplicación.</string>
    <string name="help">Ayuda</string>
    <string name="hours">Horarios de atención</string>
    <string name="directory">Directorio</string>
    <string name="government">Gobierno</string>
    <string name="procedures">Trámites</string>
    <string name="name">Nombre</string>
    <string name="news">Noticias</string>
    <string name="ok">Aceptar</string>
    <string name="organism">Organismo al cual pertenece</string>
    <string name="info">Otra información a tener en cuenta</string>
    <string name="phones">Teléfonos</string>
    <string name="quit">Salir</string>
    <string name="requirements">Requisitos</string>
    <string name="search_hint">Buscar en Gobierno Móvil</string>
    <string name="search_none">No se encontró nada relacionado con &lt;b>%1$s&lt;/b></string>
    <string name="select">Seleccione</string>
    <string name="selected">Seleccionado: </string>
    <string name="send">Enviar</string>
    <string name="subject">Asunto</string>
    <string name="procedures_title">Trámites y Servicios</string>
    <string name="twitter">Twitter</string>
    <string name="web">Página Web</string>
    <string name="license">\<b><big>Licencia GPL v3</big></b>		\n\n<b>\"Gobierno Móvil\"</b> es un producto de <b>\"Gobierno en Línea\"</b>.
		\n\nThis program is free software: you can redistribute it and/or
		modify
		it under the terms of the GNU General Public License as
		published by
		the Free Software Foundation, either version 3 of the
		License, or any
		later version.

		\n\nThis program is distributed in the
		hope that it will be useful,
		but WITHOUT ANY WARRANTY; without even the
		implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR
		PURPOSE. See the
		GNU General Public License for more details.

		\n\nYou
		should have received a copy of the GNU General Public License along
		with this program. If not, see http://www.gnu.org/licenses</string>
    <string name="capital">Distrito Capital</string>
    <string name="amazonas">Amazonas</string>
    <string name="anzoategui">Anzoátegui</string>
    <string name="apure">Apure</string>
    <string name="aragua">Aragua</string>
    <string name="barinas">Barinas</string>
    <string name="bolivar">Bolívar</string>
    <string name="carabobo">Carabobo</string>
    <string name="cojedes">Cojedes</string>
    <string name="delta_amacuro">Delta Amacuro</string>
    <string name="falcon">Falcón</string>
    <string name="guarico">Guárico</string>
    <string name="lara">Lara</string>
    <string name="merida">Mérida</string>
    <string name="miranda">Miranda</string>
    <string name="monagas">Monagas</string>
    <string name="nueva_esparta">Nueva Esparta</string>
    <string name="portuguesa">Portuguesa</string>
    <string name="sucre">Sucre</string>
    <string name="tachira">Táchira</string>
    <string name="trujillo">Trujillo</string>
    <string name="vargas">Vargas</string>
    <string name="yaracuy">Yaracuy</string>
    <string name="zulia">Zulia</string>
    <string name="results_summary">Mostrar resultados de búsquedas inmediatamente anteriores</string>
    <string name="results_title">Resultados previos</string>
    <string name="confirm">Confirmar</string>
    <!-- ehison -->
    <string name="message_update">¿Está seguro que desea actualizar los datos?</string>
    <string name="message_updated_version">La base de datos de la aplicación se encuentra actualizada</string>
    <string name="message_connection_error ">Ha ocurrido un error de conexión. Intente nuevamente</string>
    <string name="try_again">Intentar nuevamente</string>
    <string name="warning">Advertencia</string>
    <string name="full_update">La actualización se ha realizado exitosamente</string>
    <string name="pipe"> | </string>
    <string name="ic_logo_color_description">Ícono de Gobierno en Línea que sirve para cerrar esta ventana</string>
    <string name="logo_description">Logotipo de Gobierno en Línea Venezuela</string>
    <string name="ic_directory_color_description">Presione aquí para acceder al directorio del Estado venezolano</string>
    <string name="ic_procedures_color_description">Presione aquí para acceder a los trámites de las instituciones del Estado</string>
    <string name="ic_government_color_description">Presione aquí para enviar un correo electrónico al gobierno venezolano</string>
    <string name="about_summary">Acerca de esta aplicación</string>
    <string name="about_title">Versión %1$s</string>
    <string name="version">1.5.5</string>
    <string name="updating">Actualizando</string>
    <string name="please_wait">Por favor, espere...</string>
    <string name="connection_error">Error de conexión</string>
    <string name="connection_unavailable">Conexión no disponible</string>
    <string name="automatic_update_summary_off">No notificarme si hay actualizaciones disponibles</string>
    <string name="automatic_update_summary_on">Notificarme si hay actualizaciones disponibles</string>
    <string name="automatic_update">Actualizaciones</string>
    <string name="notification_alert">Nueva actualización disponible</string>
    <string name="notification_title">Actualización de datos disponible</string>
    <string name="institutions_update">Actualización de instituciones</string>
    <string name="procedures_update">Actualización de trámites</string>
    <string name="mayoralties_update">Actualización de alcaldías</string>
    <string name="update_canceled">Actualización cancelada</string>

</resources>