<?xml version="1.0" encoding="utf-8"?>
<!-- Licencia GPL v3 "Gobierno Móvil" es un producto de "Gobierno en Línea". 
	This program is free software: you can redistribute it and/or modify it under 
	the terms of the GNU General Public License as published by the Free Software 
	Foundation, either version 3 of the License, or any later version. This program 
	is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
	without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
	PURPOSE. See the GNU General Public License for more details. You should 
	have received a copy of the GNU General Public License along with this program. 
	If not, see http://www.gnu.org/licenses\n\n -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/about" android:title="@string/about"
		android:icon="@android:drawable/ic_menu_info_details"
		android:alphabeticShortcut="a" />
	<item android:id="@+id/help" android:title="@string/help"
		android:icon="@android:drawable/ic_menu_help"
		android:alphabeticShortcut="h" />
	<item android:id="@+id/search" android:title="@string/search"
		android:icon="@android:drawable/ic_menu_search"
		android:alphabeticShortcut="s" />
	<item android:id="@+id/preferences" android:title="@string/preferences"
		android:icon="@android:drawable/ic_menu_preferences"
		android:alphabeticShortcut="p" />
	<item android:title="@string/more" android:icon="@android:drawable/ic_menu_more"
		android:alphabeticShortcut="m">
		<menu>
			<item android:id="@+id/twitter" android:title="@string/twitter"
				android:alphabeticShortcut="t" />
			<item android:id="@+id/quit" android:title="@string/quit"
				android:alphabeticShortcut="q" />
		</menu>
	</item>
</menu>