<?xml version="1.0" encoding="utf-8"?>
<!--
    Licencia GPL v3 "Gobierno Móvil" es un producto de "Gobierno en Línea". 
	This program is free software: you can redistribute it and/or modify it under 
	the terms of the GNU General Public License as published by the Free Software 
	Foundation, either version 3 of the License, or any later version. This program 
	is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
	without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
	PURPOSE. See the GNU General Public License for more details. You should 
	have received a copy of the GNU General Public License along with this program. 
	If not, see http://www.gnu.org/licenses
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal"
        android:padding="4dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onMainClick"
            android:text="@string/app_name"
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" | "
            android:textColor="@color/text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/procedures"
            android:textColor="@color/text" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onMainClick"
                android:src="@color/ic_logo_color" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10sp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10sp"
            android:text="@string/selected"
            android:textColor="@color/text"
            android:textSize="18sp" >
        </TextView>

        <Spinner
            android:id="@+id/spinner_procedures"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/procedures_title" >
        </Spinner>
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="8sp" >

            <TextView
                android:id="@+id/text_procedures"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:autoLink="all"
                android:linksClickable="true"
                android:textColor="#FFFFFF"
                android:textSize="16sp" >
            </TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>